--- a/S19/Core3/fdf/Makefile
+++ b/S19/Core3/fdf/Makefile
@@ -1,74 +1,96 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: qraymaek <qraymaek@student.s19.be>         +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/11/23 10:59:31 by qraymaek          #+#    #+#              #
-#    Updated: 2023/12/30 01:47:57 by qraymaek         ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+NAME		=	fdf
+LIBFT		=	libft/libft.a
+MLX42		=	MLX42/build/libmlx42.a
+SRC	=	fdf.c init_fdf.c init_png.c init_mesh.c init_skybox.c \
+				put_skybox.c put_pixel.c put_dot.c put_mesh.c put_face.c \
+				put_line.c color_math.c vector_math.c put_sky_tri.c \
+				cleanup.c set_vert_colors.c init_hooks.c main_loop.c \
+				key_hook.c project_mesh.c cursor_hook.c validate_value.c
+OBJ			=	$(patsubst %.c, obj/%.o, $(SRC))
+CFLAGS		=	-Wall -Wextra -Werror -Ofast -flto
+LDFLAGS		=	-lm -ldl -lglfw -flto
+CC			=	cc
+COL_GREEN	= 	\033[32m
+COL_RED		=	\033[31m
+COL_YELLOW	= 	\033[38;2;214;189;28m
+COL_PINK	= 	\033[95m
+COL_DEFAULT	= 	\033[0m
 
-NAME = fdf
-INCLUDES = include
-SRCS_DIR = src
-OBJS_DIR = objs
-CC = gcc
-CFLAGS = -Wall -Wextra -Werror -g
-RM = rm -rf
-LIBFT = libft
-MLX = minilibx-linux
+.SILENT:
 
-#Colors
-DEF_COLOR = \033[0;39m
-GRAY = \033[0;90m
-RED = \033[0;91m
-GREEN = \033[0;92m
-YELLOW = \033[0;93m
-BLUE = \033[0;94m
-MAGENTA = \033[0;95m
-CYAN = \033[0;96m
-WHITE = \033[0;97m
+all: $(MLX42) $(NAME)
 
-SOURCES = read_map.c map_size.c \
-		   calculations.c \
-		  draw.c mlx.c main.c errors.c utils.c \
-		  draw_utils.c
+$(NAME): $(OBJ)
+	echo "$(COL_YELLOW)Building FdF...$(COL_DEFAULT)"
+	$(MAKE) -C libft > /dev/null
+	$(CC) $(OBJ) $(LIBFT) $(MLX42) -o $(NAME) $(LDFLAGS)
+	echo "\n$(COL_GREEN)Successfully built FdF!$(COL_DEFAULT)"
+	echo "\n$(COL_YELLOW)Try it out with $(COL_PINK)./fdf assets/maps/fdf/42.fdf $(COL_YELLOW)\
+	or any of the presets:$(COL_DEFAULT)\n"
+	echo "$(COL_PINK)make ft$(COL_DEFAULT)"
+	echo "$(COL_PINK)make alien      make foggy       make crater$(COL_DEFAULT)"
+	echo "$(COL_PINK)make mud        make pebbles     make cobblestone$(COL_DEFAULT)"
+	echo "\n$(COL_YELLOW)Please have a look at the $(COL_PINK)[$(COL_GREEN)README.md$(COL_PINK)]\
+	$(COL_YELLOW) to learn about all of the controls!$(COL_DEFAULT)\n"
+	@if [ "$(shell uname -r | grep -oi microsoft)" ]; then \
+		echo "\n$(COL_RED)It looks like you're using WSL (Windows Subsystem for Linux).";\
+		echo "The mouse cursor controls might not work properly with WSL.$(COL_YELLOW)";\
+		echo "In this case, press $(COL_PINK)Shift + W $(COL_YELLOW)to enable simpler but WSL compatible cursor controls$(COL_DEFAULT)\n";\
+	fi
 
-SRCS = $(addprefix $(SRCS_DIR)/,$(SOURCES))
-OBJS = $(addprefix $(OBJS_DIR)/,$(SOURCES:.c=.o))
+obj/%.o: src/%.c
+	mkdir -p obj
+	$(CC) $(CFLAGS) -c $< -o $@
 
-all: lib tmp $(NAME)
-
-lib:
-	@echo "$(GREEN)Creating lib files$(BLUE)"
-	@make -C $(LIBFT)
-
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) -L $(LIBFT) -L $(MLX) -o $@ $^ -lft -lm -lmlx -lXext -lX11
-	@echo "$(GREEN)Project successfully compiled"
-
-tmp:
-	@mkdir -p objs
-
-$(OBJS_DIR)/%.o: $(SRCS_DIR)/%.c $(INCLUDES)/$(NAME).h
-	@$(CC) $(CFLAGS) -c -o $@ $<
-	@echo "$(BLUE)Creating object file -> $(WHITE)$(notdir $@)... $(RED)[Done]$(WHITE)"
+$(MLX42):
+	echo "$(COL_YELLOW)Cloning MLX42...$(COL_DEFAULT)"
+	git clone https://github.com/codam-coding-college/MLX42.git > /dev/null
+	echo "$(COL_YELLOW)Switching to latest known-to-work branch...$(COL_DEFAULT)"
+	cd MLX42 && git checkout ca0f163 || > /dev/null
+	echo "$(COL_YELLOW)Building MLX42...$(COL_DEFAULT)"
+	cmake -B MLX42/build -S MLX42 > /dev/null && make -C MLX42/build -j4 > /dev/null ||\
+	(echo "\n$(COL_RED)Looks like an ERROR has occured!$(COL_DEFAULT)\n$(COL_YELLOW)Please refer to the \
+	$(COL_PINK)MLX42 GitHub $(COL_YELLOW)page to find out about	dependencies and instructions.\n\
+	$(COL_PINK)https://github.com/codam-coding-college/MLX42$(COL_DEFAULT)\n" && rm -rf MLX42)
 
 clean:
-	@echo "$(RED)Deleting library files$(BLUE)"
-	@make clean -C $(LIBFT)
-	@rm -rf $(OBJS_DIR)
+	$(MAKE) -C libft clean > /dev/null
+	rm -rf obj
+	echo "$(COL_GREEN)Object files have been removed.$(COL_DEFAULT)"
 
-fclean:
-	@echo "$(RED)Deleting library files and .a$(BLUE)"
-	@rm -rf $(OBJS_DIR)
-	@rm -f $(NAME)
-	@make fclean -C $(LIBFT)
-	@echo "$(RED)All the files are now cleaned with fclean"
+fclean: clean
+	$(MAKE) -C libft fclean > /dev/null
+	rm -rf $(NAME) MLX42
+	@echo "$(COL_GREEN)MLX42 and FdF executables have been removed.$(COL_DEFAULT)"
 
-re: fclean
-	@$(MAKE) all -j
+re: fclean all
 
-.PHONY: tmp, re, fclean, clean
+ft: all
+	echo "./fdf assets/maps/fdf/42.fdf"
+	./fdf assets/maps/fdf/42.fdf
+
+alien: all
+	echo "./fdf assets/maps/terrain/alien_height_1k.png assets/maps/terrain/alien_color_1k.png"
+	./fdf assets/maps/terrain/alien_height_1k.png assets/maps/terrain/alien_color_1k.png
+
+foggy: all
+	echo "./fdf assets/maps/terrain/foggy_height_1k.png assets/maps/terrain/foggy_color_1k.png"
+	./fdf assets/maps/terrain/foggy_height_1k.png assets/maps/terrain/foggy_color_1k.png
+
+crater: all
+	echo "./fdf assets/maps/terrain/crater_height_1k.png assets/maps/terrain/crater_color_1k.png"
+	./fdf assets/maps/terrain/crater_height_1k.png assets/maps/terrain/crater_color_1k.png
+
+cobblestone: all
+	echo "./fdf assets/maps/materials/cobblestone_height_1k.png assets/maps/materials/cobblestone_color_1k.png"
+	./fdf assets/maps/materials/cobblestone_height_1k.png assets/maps/materials/cobblestone_color_1k.png
+
+mud: all
+	echo "./fdf assets/maps/materials/mud_height_1k.png assets/maps/materials/mud_color_1k.png"
+	./fdf assets/maps/materials/mud_height_1k.png assets/maps/materials/mud_color_1k.png
+
+pebbles: all
+	echo "./fdf assets/maps/materials/pebbles_height_1k.png assets/maps/materials/pebbles_color_1k.png"
+	./fdf assets/maps/materials/pebbles_height_1k.png assets/maps/materials/pebbles_color_1k.png
+
+.PHONY: all clean fclean re ft alien foggy crater cobblestone mud pebbles
