fixed norm errors in fdf

--- a/S19/Core3/fdf/Makefile
+++ b/S19/Core3/fdf/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: quvan-de <quvan-de@student.fr>             +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/06/24 12:50:17 by quvan-de          #+#    #+#              #
+#    Updated: 2024/06/24 12:59:38 by quvan-de         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 # Naming
 NAME = fdf
 
@@ -23,6 +35,8 @@ GREEN = \033[0;92m
 BLUE = \033[0;94m
 RED = \033[0;91m
 WHITE = \033[0;97m
+
+.SILENT:
 
 # Targets
 all: mlx tmp $(NAME)
