--- a/S19/Core5/CPP00/ex02/Makefile
+++ b/S19/Core5/CPP00/ex02/Makefile
@@ -5,29 +5,40 @@
 #                                                     +:+ +:+         +:+      #
 #    By: quvan-de <quvan-de@student.fr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/10/01 19:25:59 by quvan-de          #+#    #+#              #
-#    Updated: 2024/10/01 19:26:40 by quvan-de         ###   ########.fr        #
+#    Created: 2024/10/02 11:12:39 by quvan-de          #+#    #+#              #
+#    Updated: 2024/10/02 11:12:43 by quvan-de         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = phonebook
-
-SRCS = main.cpp classDef/PhoneBook.cpp classDef/Contact.cpp
-
-OBJS = $(SRCS:.cpp=.o)
-
+# Compiler and flags
 CXX = g++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-all: $(NAME)
+# Source files
+SRCS = Account.cpp tests.cpp
 
-$(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
+# Object files
+OBJS = $(SRCS:.cpp=.o)
+
+# Output executable
+EXEC = account_program
+
+# Rules
+all: $(EXEC)
+
+$(EXEC): $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $(EXEC) $(OBJS)
+
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	rm -f $(EXEC)
 
 re: fclean all
+
+.PHONY: all clean fclean re
+
