--- a/S19/Core5/CPP/CPP02/ex03/Makefile
+++ b/S19/Core5/CPP/CPP02/ex03/Makefile
@@ -5,18 +5,18 @@
 #                                                     +:+ +:+         +:+      #
 #    By: quvan-de <quvan-de@student.fr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/10/07 16:11:28 by quvan-de          #+#    #+#              #
-#    Updated: 2024/10/11 12:03:51 by quvan-de         ###   ########.fr        #
+#    Created: 2024/10/14 14:51:21 by quvan-de          #+#    #+#              #
+#    Updated: 2024/10/14 14:51:41 by quvan-de         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = fixed_point
+NAME = bsp_triangle
+
+SRCS = main.cpp Imp/Fixed.cpp Imp/Point.cpp bsp.cpp
+OBJS = $(SRCS:.cpp=.o)
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-
-SRCS = main.cpp Imp/Fixed.cpp
-OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
@@ -30,5 +30,3 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
-
-.PHONY: all clean fclean re
