--- a/S19/Core5/CPP/CPP03/ex01/Makefile
+++ b/S19/Core5/CPP/CPP03/ex01/Makefile
@@ -5,17 +5,17 @@
 #                                                     +:+ +:+         +:+      #
 #    By: quvan-de <quvan-de@student.fr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/10/07 16:11:28 by quvan-de          #+#    #+#              #
-#    Updated: 2024/10/11 12:03:51 by quvan-de         ###   ########.fr        #
+#    Created: 2024/10/16 14:34:25 by quvan-de          #+#    #+#              #
+#    Updated: 2024/10/16 15:19:28 by quvan-de         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = fixed_point
+NAME = claptrap
 
-CXX = c++
+CXX = g++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = main.cpp Imp/Fixed.cpp
+SRCS = main.cpp Imp/ClapTrap.cpp Imp/ScavTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
